[package]
name = "capnp-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[build-dependencies]
capnpc = "0.14"

[dependencies]
capnp = "0.14"
capnp-rpc = "0.14"
futures = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.6", features = ["compat"]}

[[bin]]

name = "calculator"
path = "src/main.rs"
